Bower.Json file has been changed

--- a/bower.json
+++ b/bower.json
@@ -3,7 +3,7 @@
   "description": "application demo for sfm",
   "main": "",
   "authors": [
-    "BalajiA <balaji.ampolu@codeitinc.com>"
+    "Balaji"
   ],
   "license": "ISC",
   "homepage": "",
